<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="8">

    <LinearLayout
        android:background="@color/bgrParent"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:gravity="right|bottom"
            android:textSize="48sp"
            android:id="@+id/txtInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:textColor="@color/black"
            android:textSize="25sp"
            android:backgroundTint="@color/bgrParent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:id="@+id/btn7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_7"
            tools:ignore="NestedWeights" />
        <Button
            android:textColor="@color/black"
            android:textSize="25sp"
            android:backgroundTint="@color/bgrParent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:id="@+id/btn8"
            android:onClick="onDigit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_8" />
        <Button
            android:textColor="@color/black"
            android:textSize="25sp"
            android:backgroundTint="@color/bgrParent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:id="@+id/btn9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_9" />
        <Button
            android:textColor="@color/black"
            android:textSize="25sp"
            android:backgroundTint="@color/bgrParent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:id="@+id/btnPlus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/plus" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:textColor="@color/black"
            android:textSize="25sp"
            android:backgroundTint="@color/bgrParent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_4"
            tools:ignore="NestedWeights" />
        <Button
            android:textColor="@color/black"
            android:textSize="25sp"
            android:backgroundTint="@color/bgrParent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:id="@+id/btn5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_5" />
        <Button
            android:textColor="@color/black"
            android:textSize="25sp"
            android:backgroundTint="@color/bgrParent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:id="@+id/btn6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_6"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:textColor="@color/black"
            android:textSize="40sp"
            android:backgroundTint="@color/bgrParent"
            android:layout_margin="3dp"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:id="@+id/btnSub"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Sub"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:textColor="@color/black"
            android:textSize="25sp"
            android:backgroundTint="@color/bgrParent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:id="@+id/btn1"
            android:onClick="onDigit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_1"
            tools:ignore="NestedWeights" />
        <Button
            android:textColor="@color/black"
            android:textSize="25sp"
            android:backgroundTint="@color/bgrParent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_2" />
        <Button
            android:textColor="@color/black"
            android:textSize="25sp"
            android:backgroundTint="@color/bgrParent"
            android:layout_margin="3dp"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_3" />
        <Button
            android:textColor="@color/black"
            android:textSize="25sp"
            android:backgroundTint="@color/bgrParent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:id="@+id/btnMul"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Mul"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <LinearLayout
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:textColor="@color/black"
            android:textSize="25sp"
            android:backgroundTint="@color/bgrParent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onClear"
            android:id="@+id/btnClr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/c"
            tools:ignore="NestedWeights" />
        <Button
            android:textColor="@color/black"
            android:textSize="25sp"
            android:backgroundTint="@color/bgrParent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_0" />
        <Button
            android:textColor="@color/black"
            android:textSize="25sp"
            android:backgroundTint="@color/bgrParent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onDecimalPoint"
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Dot" />
        <Button
            android:textColor="@color/black"
            android:textSize="25sp"
            android:backgroundTint="@color/bgrParent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:id="@+id/btnDiv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Div"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:textColor="@color/black"
            android:textSize="25sp"
            android:backgroundTint="@color/bgrParent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:onClick="onEqual"
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Equal"
            tools:ignore="NestedWeights" />
    </LinearLayout>

</LinearLayout>